<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        card_view:srcCompat="@drawable/bg_signup" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/sign_up_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType=""
                android:padding="8dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#000000"
                android:textSize="12sp" />


            <!-- Username Field -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/user_svgrepo_com"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType=""
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#000000"
                android:textSize="12sp" />

            <!-- Password Field -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/lock_svgrepo_com"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#000000"
                android:textSize="12sp" />

            <!-- Email Field -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/email_svgrepo_com"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#000000"
                android:textSize="12sp" />


            <!-- Type of com.example.demo_study_app.User Dropdown -->

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple_200"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Already Registered Link -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:padding="2dp"
        android:text="@string/already_user"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="10sp" />


</LinearLayout>
