<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".PyIndex4Fragment">

    <!-- App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:title="Python for Everyone: Unleash the Power of Coding!"
            app:titleEnabled="true"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
            app:collapsedTitleTextAppearance="@style/CollapsedTitleStyle">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/intro_img"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/pythoncoursebanner" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Styled Title -->
            <TextView
                android:id="@+id/introductiontopython"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.  Control Structures: Conditional Statements and Loops"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:padding="12dp"
                android:layout_marginBottom="12dp" />

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/blue_color"
                android:layout_marginBottom="12dp" />

            <!-- Course Content Box -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/topicContentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="50dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/introduction_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:lineSpacingExtra="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Previous Button (Hidden for the first topic) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:layout_gravity="bottom"
        android:gravity="center">

        <!-- Previous Button -->
        <Button
            android:id="@+id/previousButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:padding="8dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:background="@color/purple_500"
            android:text="@string/previous_button" />

        <!-- Next Button -->
        <Button
            android:id="@+id/nextButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="@color/purple_500"
            android:text="@string/next_button"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
